# macc-full

./: Dockerfile  README.md  Stuff.md  build-www.bat  config.bat  create-and-run-www.bat
.github/workflows/: build.yml
docs/: client-rest-api.md
lib/: Cargo.toml  README.md  build.rs
lib/src/: _ecdsa.rs  _settings.rs  blockchain.rs  ecdsa.rs  hashes.rs  lib.rs  script.rs  settings.rs  utils.rs
lib/src/blockchain/: block.rs  blockchain.rs  difficulty.rs  helper.rs  mempool.rs  mod.rs  transaction.rs  txstore.rs
lib/tests/: test_blockchain.rs  test_ecdsa.rs  test_ecdsa.rs.old  test_ecdsa_script.rs
py/: README.md  wallet.py
py/python_lib/: ma_cryptocurrency-0.1.0-cp310-none-win_amd64.whl  ma_cryptocurrency-0.1.0-cp39-cp39-linux_x86_64.whl
web/: README.md  next.config.js  package-lock.json  package.json
web/components/: header.js  layout.js  settings.js
web/pages/: _app.js  index.js  wallet.js
web/pages/api/: faucet.js
web/pages/explorer/: block.js  index.js  transaction.js
web/rust-wasm/: Cargo.toml
web/rust-wasm/pkg/: macc_bindings.d.ts  macc_bindings.js  macc_bindings_bg.js  macc_bindings_bg.wasm  macc_bindings_bg.wasm.d.ts  package.json
web/rust-wasm/src/: lib.rs
web/styles/: styles.css
www/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js  webpack.dev.js
www/public/: index.html
www/rust-src/: lib.rs
www/src/: API.js  App.js  Explorer.js  Faucet.js  Header.js  Wallet.js  helper.js  index.css  index.jsx  lib.rs
www/src/explorer/: block.js  blockchain.js
