[package]
name = "macc_lib"
version = "0.1.0"
edition = "2018"
build = "build.rs"
crate-type = ["cdylib", "rlib"]

[features]
mining = ["rocket"]

[dependencies]
secp256k1 = { version = "0.20.3", features = ["rand", "rand-std", "bitcoin_hashes"] }
rocket = { version = "0.5.0-rc.1", features = ["json"], optional = true }
# pyo3 = { version = "0.15.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
bincode = "1.2.1"
chrono = "0.4.19"
bs58 = "0.4.0"
log = "0.4.14"
num = "0.4.0"

[build-dependencies]
rustc_version = "0.2"