[package]
name = "macc_lib"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib", "rlib"]

[dependencies]
secp256k1 = { version = "0.21.2", features = ["rand-std", "bitcoin_hashes"] }
# rocket = { version = "0.5.0-rc.1", features = ["json"], optional = true }
# pyo3 = { version = "0.15.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
bitcoin_hashes = "0.10.0"
# serde_json = "1.0.59"
bincode = "1.2.1"
# chrono = "0.4.19"
bs58 = "0.4.0"
log = "0.4.14"
num = "0.4.0"