[package]
name = "macc_lib"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib", "rlib"]

[dependencies]
secp256k1 = { version = "0.21.2", features = ["rand-std", "bitcoin_hashes"] }
serde = { version = "1.0", features = ["derive"] }
bitcoin_hashes = "0.10.0"
bincode = "1.2.1"
bs58 = "0.4.0"
log = "0.4.14"
num = "0.4.0"